deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deps-rs
spec:
  selector:
    matchLabels:
      app: deps-rs
  template:
    metadata:
      labels:
        app: deps-rs
    spec:
      volumes:
        - name: cargo
          emptyDir: {}
      containers:
        - name: deps-rs
          image: ghcr.io/deps-rs/deps.rs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /home/deps/.cargo
              name: cargo
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            httpGet:
              path: /repo/github/deps-rs/deps.rs
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
